*Chito 1.2.2 (unreleased)*

* Update CKEditor to 3.4

* Change some editor dialogs to a better size 

* Cached postbars

* Cached comments of individual post

* Cached tag list of individual post

* Fix a SQL problem in fetching talks

* Fix datatime out of range problem in archive sidebar

* Fix crash problem if blog has no post yet

* Fix extra \hat{A} problem in auto_js_tex plugin

* Fix custom header position

* Fix encoding problem in comment form when there is UTF-8 chars in cookies


*Chito 1.2.1*

* Fix comment problem in IE

* Fix first setup problem

* Fix RSS problem



*Chito 1.2.0*

* Adapt all code to Rails 3.0

* Change blog editor to CKEditor from FCKeditor

* Enhanced file manager

* MetaWeBlog XMLRPC API support

* Configurable admin dashboard layout
